--- a/addons/website_twitter_wall/views/website_twitter_wall.xml
+++ b/addons/website_twitter_wall/views/website_twitter_wall.xml
@@ -24,6 +24,9 @@
     <!-- Assets for twitter wall -->
     <template id="assets_frontend" inherit_id="website.assets_frontend" name="Twitter Wall Assets">
         <xpath expr="." position="inside">
+            <script type="text/javascript" src="/website_twitter_wall/static/lib/bootstrap-colorpicker/src/js/colorpicker-color.js" />
+            <script type="text/javascript" src="/website_twitter_wall/static/lib/bootstrap-colorpicker/src/js/colorpicker.js" />
+            <link type="text/less" href="/website_twitter_wall/static/lib/bootstrap-colorpicker/src/less/colorpicker.less" rel="stylesheet" t-ignore="true" />
             <script type="text/javascript" src="/website_twitter_wall/static/src/js/website_twitter_wall.js" />
             <script type="text/javascript" src="/website_twitter_wall/static/src/js/website_twitter_wall_editor.js" />
             <link type="text/less" href="/website_twitter_wall/static/src/less/website_twitter_wall.less" rel="stylesheet" t-ignore="true" />
@@ -137,7 +140,7 @@
                                     <button class="btn btn-default odoo-tw-view-live-option-btn" data-operation="repeat" title="Repeat"><i class="fa fa-repeat" /></button>
                                     <button class="btn btn-default odoo-tw-view-live-option-btn" data-operation="shuffle" title="Shuffle"><i class="fa fa-random" /></button>
                                 </div>
-                                <button data-trigger="focus" data-placement="top" class="btn btn-default odoo-tw-view-live-color-picker"><i class="fa fa-paint-brush" /></button>
+                                <button data-placement="top" class="btn btn-default odoo-tw-view-live-color-picker" title="Background Colors"><i class="fa fa-paint-brush" /></button>
                                 <button class="btn btn-default odoo-tw-view-live-option-btn" data-operation="theme" title="Theme"><i class="fa fa-adjust" /></button>
                                 <button class="btn btn-default odoo-tw-screen" title="Exit full screen"><i class="fa fa-compress" /></button>
                             </div>
