--- a/addons/account_followup/views/report_followup.xml
+++ b/addons/account_followup/views/report_followup.xml
@@ -18,16 +18,17 @@
     <xpath expr="//script[@id='oe-account-inline-script']" position='replace'>
         <script type="text/javascript" src="/account_followup/static/src/js/account_report_widgets.js"></script>
         <script type="text/javascript" id='oe-account-inline-script'>
-            (function () {
+            odoo.define('account_followup.FollowupReport', function (require) {
                 'use strict';
-
+                
+                var FollowupReportWidget = require('account_followup.FollowupReportWidget');
+                
                 $(document).ready(function() {
-                    var _t = openerp._t;
-                    var reportWidgets = new openerp.account_followup.FollowupReportWidgets();
-                    reportWidgets.setElement($('.oe_account_report_widgets'));
-                    reportWidgets.start();
+                    var followup_report_widget = new FollowupReportWidget();
+                    followup_report_widget.setElement($('.oe_account_report_widgets'));
+                    followup_report_widget.start();
                 });
-            })();
+            });
         </script>
     </xpath>
 </template>
