[FIX] website_twitter_wall: Fix colorpicker issue

--- a/addons/website_twitter_wall/static/src/less/website_twitter_wall.less
+++ b/addons/website_twitter_wall/static/src/less/website_twitter_wall.less
@@ -113,7 +113,7 @@
 }
 
 nav.odoo-tw-hide-onlive:hover .odoo-tw-view-live-options {
-    opacity: 1;
+    opacity: 1 !important;
 }
 
 .odoo-tw-view-live-option-single {
