--- a/addons/website_contract/views/templates.xml
+++ b/addons/website_contract/views/templates.xml
@@ -34,7 +34,17 @@
                                 <span class="label label-default"><i class="fa fa-fw fa-remove"/> Closed</span>
                             </t>
                         </small>
+                        <button class="btn btn-default btn-xs" id="wc-close-account" t-if="display_close">Close Contract</button>
                     </h3>
+                    <div t-if="account.state=='pending'" class="alert alert-warning" role="alert">
+                        <p>Your contract is pending.
+                            <span t-if="not account.payment_mandatory and not account.manager_id">Contact us.</span>
+                            <span t-if="not account.payment_mandatory and account.manager_id"><a href="#wc-your-contact">Contact</a> your sales representative.</span>
+                            <span t-if="account.payment_mandatory">
+                                <a href="#wc-auto-payment">Pay now</a>
+                                <span t-if="account.manager_id"> or <a href="#wc-your-contact">contact</a> your sales representative</span>.</span>
+                        </p>
+                    </div>
                     <div class="row">
                         <div class="col-md-5">
                                 <h4>Invoice Address</h4>
@@ -65,11 +75,11 @@
                                     </t>
                                 </p>
                                 <p><strong>Next invoice: </strong><span id="wc-next-invoice" t-field="account.recurring_next_date"/></p>
-                                <p t-if="account.sudo().template_id.user_closable and account.state!='close'"><button class="btn btn-default btn-xs" id="wc-close-account">Close Contract</button></p>
+                                <p><strong>Your are: </strong><span t-esc="user.name"/></p>
                             </div>
 
                     </div>
-                    <h3>Your Plan: <span t-field="account.sudo().template_id.name"/> <a t-if="account.state!='close'" class="btn btn-default" t-att-href="'/account/contract/'+str(account.id)+'/change'+'?uuid='+str(account.uuid)">Change</a></h3>
+                    <h3>Your Plan: <span t-field="active_plan.name"/> <a t-if="account.state!='close'" class="btn btn-default" t-att-href="'/account/contract/'+str(account.id)+'/change'+'?uuid='+str(account.uuid)">Change</a></h3>
                         <table class="table table-default" id="wc-account-table">
                             <thead>
                                 <tr><th>Description</th><th></th><th>Price</th><th/></tr>
@@ -91,7 +101,7 @@
                                         <span t-field="line.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "account.company_id.currency_id"}'/> / <span t-field="line.uom_id"/>
                                     </td>
                                     <td>
-                                        <a t-if="line.get_template_option_line().portal_access in ['both'] or user.has_group('base.group_sale_salesman') and account.state!='close'"
+                                        <a t-if="(line.get_template_option_line().portal_access in ['both'] or is_salesman) and account.state!='close'"
                                            class="btn btn-danger btn-xs wc-remove-option"
                                            t-att-data-option-id="line.get_template_option_line().id"
                                            t-att-data-option-name="line.name"
@@ -141,18 +151,18 @@
                                     <tr>
                                         <td colspan="4"><h4 class="strong">Extra Options</h4></td>
                                     </tr>
-                                    <tr t-foreach="account.recurring_inactive_lines" t-as="line">
+                                    <tr t-foreach="inactive_options" t-as="line">
                                         <td  class="line-description"><span t-field="line.name"/></td>
                                         <td ><t t-if="line.quantity > 1"><span t-field="line.quantity"/></t></td>
                                         <td>
-                                            <span t-field="line.sudo().price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "account.company_id.currency_id"}'/> / <span t-field="line.uom_id"/>
+                                            <span t-field="line.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "account.company_id.currency_id"}'/> / <span t-field="line.uom_id"/>
                                         </td>
                                         <td>
                                             <a t-if="line.portal_access in ['both', 'upgrade'] and account.state!='close'"
                                                class="btn btn-success btn-xs wc-add-option"
                                                t-att-data-option-id="line.id"
                                                t-att-data-option-name="line.name"
-                                               t-att-data-option-subtotal="str(line.sudo().price_subtotal)"
+                                               t-att-data-option-subtotal="str(line.price_subtotal)"
                                                data-target="add">
                                                 <i class="fa fa-fw fa-shopping-cart"/> Add
                                             </a>
@@ -165,7 +175,56 @@
                         <h3>Terms and conditions</h3>
                         <div t-field="account.description"/>
                     </t>
+                    <div t-if="account.payment_mandatory">
+                        <a name="wc-auto-payment"/>
+                        <h3>Automatic Payments</h3>
+                        <p>Your next payment will be processed on <span t-field="account.recurring_next_date"/>.</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <form method="post" class="mt16" id="wc-payment-form" t-attf-action="/account/contract/payment/#{account.id}/#{account.uuid}">
+                                    <div class="form-group">
+                                        <label class="control-label" for="pay_meth">Change Payment Method:</label>
+                                        <select class="form-control" name="pay_meth">
+                                            <option value="-2">Current: <span t-field="account.payment_method_id.name"/></option>
+                                            <option  t-if="part_def_pm" value="0">Default for <span t-field="account.partner_id"/>: <span t-field="part_def_pm.name"/></option>
+                                            <option value="-1">New</option>
+                                            <optgroup label="All Payment Methods">
+                                                <t t-foreach="part_pms" t-as="pm">
+                                                    <option  t-att-value="pm.id" t-esc="pm.name"/>
+                                                </t>
+                                            </optgroup>
+                                        </select>
+                                    </div>
+                                    <input type="hidden" name="pay_now" value="1" t-if="account.state=='pending'"/>
+                                    <div class="clearfix"></div>
+                                    <button class="btn btn-primary pull-right">Confirm<span t-if="account.state=='pending'"> and pay</span> <span class="fa fa-long-arrow-right"></span></button>
+                                </form>
+                                <div id="new_payment_method" class="hidden">
+                                    <div class="col-md-6">
+                                        <div t-if="error_message" class="alert alert-danger">
+                                          <t t-foreach="error_message" t-as="err"><t t-esc="err"/><br /></t>
+                                        </div>
+                                        <div class="row">
+                                            <div t-if='len(acquirers)>1'>
+                                                <label class="control-label" for="pm_acquirer_id">Acquirer</label>
+                                                <select name="pm_acquirer_id" class="form-control">
+                                                    <t t-foreach="acquirers" t-as="acquirer">
+                                                        <option t-att-value="acquirer['id']" t-esc="acquirer['name']"/>
+                                                    </t>
+                                                </select>
+                                            </div>
+                                            <t t-foreach="acquirers" t-as="acquirer">
+                                                <div t-raw="acquirer['template']" t-att-data-acquirer-id="acquirer['id']" t-attf-class="acquirer #{'hidden' if acquirer!=acquirers[0] else ''}"/>
+                                            </t>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <h4 t-if="account.manager_id">Your Contact: </h4>
+                    <a name="wc-your-contact"/>
                         <div t-field="account.manager_id" t-field-options='{
                             "widget": "contact",
                             "fields": [
@@ -183,7 +242,6 @@
             </div>
         </t>
     </template>
-
     <!--  Modification Pages -->
     <template id="change_template" name="Change your plan">
         <t t-call="website.layout">
@@ -201,10 +259,10 @@
                     <h1>Change Your Plan</h1>
                     <p>Your options will be carried to the new plan if they are available.</p>
                     <div class="row">
-                        <t t-set="template" t-value="account.sudo().template_id"/>
+                        <t t-set="template" t-value="active_template"/>
                         <t t-call="website_contract.template_panel"/>
 
-                        <t t-foreach="account_templates" t-as="template">
+                        <t t-foreach="inactive_templates" t-as="template">
                             <t t-if="template.user_selectable and not template.id==account.template_id.id">
                                 <t t-call="website_contract.template_panel"/>
                             </t>
