[IMP]removed computed fields and used classic one2many + domain fields. Improved kanban_gauge.js regading one2many fields, if using o2m fields as a argument in kanban gauge.

--- a/addons/hr_appraisal/static/src/css/hr_appraisal.css
+++ b/addons/hr_appraisal/static/src/css/hr_appraisal.css
@@ -1,4 +1,7 @@
 .oe_appraisal_kanban_box {
-    height : auto;
-    width : 300px;
+    height: auto;
+    width: 300px;
+}
+.openerp .oe_stat_button:hover .oe_form_x2many_counter a{
+    color: white
 }
