--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -56,6 +56,10 @@
     .transition(background-color 0.15s ease);
 }
 
+.o-debug-manager {
+    background-color: @odoo-brand-secondary;
+}
+
 .o-control-panel-first-row, .o-control-panel-second-row {
     background-color: white;
 }
